--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     line-height: 1.6;
     margin: 0;
     padding: 20px;
-    background-color: #n5n5n5;
+    background-color: #f4f4f4;
 }
 
 
@@ -13,5 +13,5 @@ h1 {
 
 
 p {
-    color: #777;
+    color: #666;
 }
